Implement Phase 5B temporary importer CLI